--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "vite": "^4.4.11"
   },
   "dependencies": {
-    "fastify": "^4.24.3"
+    "@fastify/cors": "^8.4.0",
+    "@fastify/multipart": "^8.0.0",
+    "fastify": "^4.24.3",
+    "ulid": "^2.3.0"
   }
 }
