--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/multipart": "^8.0.0",
+    "buffer": "^6.0.3",
+    "ebml": "^3.0.0",
     "fastify": "^4.24.3",
     "ulid": "^2.3.0"
   }
