--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "run-p dev server",
+    "server": "node --watch server.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -13,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "vite": "^4.4.11"
   },
   "dependencies": {
