--- a/packages/webm-tools-demo/package.json
+++ b/packages/webm-tools-demo/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "true"
   },
   "repository": {
     "type": "git",
