--- a/packages/webm-tools/package.json
+++ b/packages/webm-tools/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.1",
+    "path-scurry": "^1.10.1",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.2"
   }
