--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "path-scurry": "^1.10.1",
+    "undici-types": "^6.3.0"
   }
 }
