--- a/packages/webm-tools/package.json
+++ b/packages/webm-tools/package.json
@@ -23,7 +23,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "buffer": "^6.0.3",
+    "@ludovicm67/media-tools-utils": "^0.0.0",
     "commander": "^11.1.0"
   },
   "publishConfig": {
