--- a/packages/media-tools-utils/package.json
+++ b/packages/media-tools-utils/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "typings": "tsc",
-    "clean": "rimraf *.tgz **/*.d.ts*",
+    "clean": "rimraf *.tgz *.d.ts* **/*.d.ts*",
     "prepack": "npm run clean && npm run typings",
     "postpublish": "npm run clean",
     "test": "true"
