--- a/packages/media-tools-demo/package.json
+++ b/packages/media-tools-demo/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "run-p dev server",
     "server": "node --watch server.js",
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "test": "true"
@@ -32,6 +32,7 @@
     "@fastify/cors": "^8.5.0",
     "@fastify/multipart": "^8.1.0",
     "@ludovicm67/webm-tools": "^0.2.1",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "fastify": "^4.25.2",
     "ulid": "^2.3.0"
   },
