--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --quiet --ignore-path .gitignore",
     "test": "npm run test --workspaces",
     "release": "changeset publish",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "npm run build --workspaces"
   },
   "workspaces": [
     "packages/*"
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
