--- a/packages/mp4-tools/package.json
+++ b/packages/mp4-tools/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "typings": "tsc",
     "clean": "rimraf *.tgz *.d.ts* **/*.d.ts*",
-    "prepack": "npm run clean && npm run typings",
+    "build": "npm run clean && npm run typings",
     "postpublish": "npm run clean",
     "test": "true"
   },
