--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,16 +28,13 @@ jobs:
           node-version: 20
 
       - name: Install Dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
+        run: yarn
 
       - name: Create release Pull Request or publish to NPM
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: npm run release
+          publish: yarn release
           commit: "chore: release"
           title: "Merge to release"
         env:
