--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "lint": "eslint . --quiet --ignore-path .gitignore",
-    "test": "npm run test --workspaces",
+    "test": "yarn workspaces run test",
     "release": "changeset publish",
     "prepare": "husky",
-    "build": "npm run build --workspaces"
+    "build": "yarn workspaces run build"
   },
   "workspaces": [
     "packages/*"
@@ -21,15 +21,11 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^9.0.10",
-    "lint-staged": "^15.2.1",
-    "path-scurry": "^1.10.1",
-    "undici-types": "^6.6.0"
+    "husky": "^9.0.10"
   }
 }
