--- a/packages/media-tools/package.json
+++ b/packages/media-tools/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "typings": "tsc",
     "clean": "rimraf *.tgz **/*.d.ts*",
-    "build": "npm run clean && npm run typings",
-    "postpublish": "npm run clean",
+    "build": "yarn clean && yarn typings",
+    "prepack": "yarn build",
+    "postpublish": "yarn clean",
     "test": "true"
   },
   "repository": {
