--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,7 +43,7 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
-      - name: "Install rollup (temporary fix for: https://github.com/npm/cli/issues/4828)"
-        run: npm i -O @rollup/rollup-linux-x64-gnu
       - name: Run build of each package
         run: npm run build
+      - name: Display result of a built file
+        run: cat packages/media-tools/dist/index.d.ts
