chore: improve how types are generated

--- a/packages/media-tools-utils/package.json
+++ b/packages/media-tools-utils/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "typings": "tsc",
     "clean": "rimraf dist/",
-    "build": "npm run clean && npm run typings",
+    "build": "npm run typings",
     "prepack": "npm run build",
     "test": "true"
   },
