--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Run the build
+        run: npm run build
+
       - name: Create release Pull Request or publish to NPM
         id: changesets
         uses: changesets/action@v1
