--- a/packages/media-tools/package.json
+++ b/packages/media-tools/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@ludovicm67/media-tools-utils": "^0.1.8",
     "@ludovicm67/mp4-tools": "^0.2.7",
+    "@ludovicm67/ogg-tools": "^0.1.2",
     "@ludovicm67/webm-tools": "^0.3.7",
     "buffer": "^6.0.3"
   },
