--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,3 +45,29 @@ jobs:
         run: npm ci
       - name: Run build of each package
         run: npm run build
+
+      - name: Run build of media-tools-utils
+        run: npm run prepack
+        working-directory: packages/media-tools-utils
+
+      - name: Run build of mp4-tools
+        run: npm run prepack
+        working-directory: packages/mp4-tools
+
+      - name: Run build of ogg-tools
+        run: npm run prepack
+        working-directory: packages/ogg-tools
+
+      - name: Run build of webm-tools
+        run: npm run prepack
+        working-directory: packages/webm-tools
+
+      - name: Run build of media-tools
+        run: npm run prepack
+        working-directory: packages/media-tools
+
+      - name: Check if types are complete
+        run: |
+          grep -q "as mp4 from '@ludovicm67/mp4-tools'" ./packages/media-tools/dist/index.d.ts
+          grep -q "as ogg from '@ludovicm67/ogg-tools'" ./packages/media-tools/dist/index.d.ts
+          grep -q "as webm from '@ludovicm67/webm-tools'" ./packages/media-tools/dist/index.d.ts
