--- a/packages/media-tools-demo/package.json
+++ b/packages/media-tools-demo/package.json
@@ -11,7 +11,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "true"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,8 @@
     "ulid": "^2.3.0"
   },
   "devDependencies": {
+    "playwright": "^1.42.0",
+    "@types/node": "^20.11.23",
     "npm-run-all": "^4.1.5",
     "vite": "^5.1.4"
   }
