--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,29 +8,29 @@ on:
       - "**"
 
 jobs:
-  # tests:
-  #   runs-on: ubuntu-latest
+  tests:
+    runs-on: ubuntu-latest
 
-  #   strategy:
-  #     matrix:
-  #       node-version:
-  #         - 18
-  #         - 20
+    strategy:
+      matrix:
+        node-version:
+          - 18
+          - 20
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-  #     - name: Set up NodeJS ${{ matrix.node-version }}
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: ${{ matrix.node-version }}
+      - name: Set up NodeJS ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
 
-  #     - name: Install dependencies
-  #       run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-  #     - name: Run tests
-  #       run: npm run test
+      - name: Run tests
+        run: npm run test
 
   build:
     runs-on: ubuntu-latest
