--- a/packages/media-tools/package.json
+++ b/packages/media-tools/package.json
@@ -9,8 +9,7 @@
     "typings": "tsc",
     "clean": "rimraf *.tgz dist/",
     "build": "npm run typings",
-    "prepack": "npm run build",
-    "test": "true"
+    "prepack": "npm run build"
   },
   "repository": {
     "type": "git",
