--- a/packages/mp4-tools/package.json
+++ b/packages/mp4-tools/package.json
@@ -10,8 +10,7 @@
     "typings": "tsc",
     "clean": "rimraf dist/",
     "build": "npm run typings",
-    "prepack": "npm run build",
-    "test": "true"
+    "prepack": "npm run build"
   },
   "repository": {
     "type": "git",
