--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Initialize Playwright
+        run: npx playwright install
+
       - name: Run tests
         run: npm run test
 
