--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,20 +11,14 @@ jobs:
   tests:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version:
-          - 18
-          - 20
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up NodeJS ${{ matrix.node-version }}
+      - name: Set up NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "lts/*"
 
       - name: Install dependencies
         run: npm ci
@@ -43,7 +37,7 @@ jobs:
       - name: Set up NodeJS
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "lts/*"
       - name: Install dependencies
         run: npm ci
       - name: Run build of each package
