--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "type": "module",
   "scripts": {
     "lint": "eslint . --quiet --ignore-path .gitignore",
-    "test": "wsrun --report -msc test",
-    "clean": "wsrun --report -mc clean",
+    "test": "npm run test --workspaces --if-present",
+    "clean": "npm run clean --workspaces --if-present",
     "release": "changeset publish",
     "prepare": "husky",
-    "build": "npm run clean && wsrun --report -msc build"
+    "build": "npm run clean && npm run build --workspaces --if-present"
   },
   "workspaces": [
     "packages/*"
@@ -21,14 +21,13 @@
     ]
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.4",
+    "@changesets/cli": "^2.29.7",
     "eslint": "^8.57.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.0",
-    "wsrun": "^5.2.4"
+    "lint-staged": "^16.1.6"
   }
 }
