--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Root package to handle all media-tools packages",
   "type": "module",
   "scripts": {
-    "lint": "eslint . --quiet --ignore-path .gitignore",
+    "lint": "eslint . --quiet",
     "test": "npm run test --workspaces --if-present",
     "clean": "npm run clean --workspaces --if-present",
     "release": "changeset publish",
@@ -22,12 +22,17 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-promise": "^7.2.1",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.6"
+    "lint-staged": "^16.1.6",
+    "prettier": "^3.6.2"
   }
 }
